minor text corrections

--- a/views/legal/contact.ejs
+++ b/views/legal/contact.ejs
@@ -15,7 +15,7 @@
                                 <p>Kontaktní osoba</p>
                             </div>
                             <div class="col-8">
-                                <p>Mgr. Jakub Spáčil</p>
+                                <p>Ondřej Holubec</p>
                             </div>
                             <hr />
                             <div class="col-4 fw-bold">
@@ -29,7 +29,7 @@
                                 <p>E-mail</p>
                             </div>
                             <div class="col-8">
-                                <p><a href="mailto:jakub@inlege.cz">jakub@inlege.cz</a></p>
+                                <p><a href="mailto:ondrej@inlege.cz">ondrej@inlege.cz</a></p>
                             </div>
                             <hr />
                             <div class="col-4 fw-bold">
