sidlo adresa update

--- a/views/cards/show20.ejs
+++ b/views/cards/show20.ejs
@@ -176,7 +176,7 @@
           <div class="modal-body" style="text-align: center;">
             <h5 class="modal-title mb-3" style="text-align: center;"><i class="far fa-star fa-lg"></i> Vyzkoušej ukládání kartiček</h5>
             <p class="p-3">Hvězdičkou si můžeš <b>ukládat</b> kartičky, které si potřebuješ více zopakovat. Poté si je můžeš <b>procházet</b> pod odkazem "Uložené kartičky" v horním menu.</p>
-            <p class="pb-3 px-3">Tohle a další stovky kartiček získáš <b>s předplatným Premium</b>.</p>
+            <p class="pb-3 px-3">Tohle a další tisíce kartiček získáš <b>s předplatným Premium</b>.</p>
             <a href="/premium" class="btn btn-danger">Zjistit více</a>
           </div>
         </div>
