--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -20,7 +20,7 @@
     <meta name="twitter:image"             content="https://www.inlege.cz/img/fb_sharing.png">
     <meta property="og:url"                content="https://www.inlege.cz/" />
     <meta property="og:title"              content="InLege - Studuj právo efektivně!" />
-    <meta property="og:description"        content="Stovky interaktivních kartiček zdarma. Všechny obory práva na jednom místě." />
+    <meta property="og:description"        content="Tisíce interaktivních kartiček zdarma. Všechny obory práva na jednom místě." />
     <meta property="og:image"              content="https://www.inlege.cz/img/fb_sharing.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
