--- a/views/premium.ejs
+++ b/views/premium.ejs
@@ -22,7 +22,7 @@
         <meta name="twitter:image"             content="https://www.inlege.cz/img/fb_sharing.png">
         <meta property="og:url"                content="https://www.inlege.cz/" />
         <meta property="og:title"              content="InLege - Studuj právo efektivně!" />
-        <meta property="og:description"        content="Stovky interaktivních kartiček zdarma. Všechny obory práva na jednom místě." />
+        <meta property="og:description"        content="Tisíce interaktivních kartiček zdarma. Všechny obory práva na jednom místě." />
         <meta property="og:image"              content="/img/fb_sharing.png" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -59,7 +59,7 @@
             <div class="row">
                 <div class="col-md-8 offset-md-2 text-center my-5">
                     <h1 class="mb-4">Naše balíčky</h1>
-                    <p class="fs-5">Většina obsahu aplikace InLege je dostupná zdarma s balíčkem Free. Lze si však zvolit také balíček Premium s měsíční, pololetní nebo roční platbou. V rámci balíčku Premium získáš více než 1 000 prémiových kartiček a další funkce.</p>
+                    <p class="fs-5">Většina obsahu aplikace InLege je dostupná zdarma s balíčkem Free. Lze si však zvolit také balíček Premium s měsíční, pololetní nebo roční platbou. V rámci balíčku Premium získáš více než 2 500 prémiových kartiček a další funkce.</p>
                 </div>
             </div>
         </div>
