texts edits + question beta banner

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -47,7 +47,7 @@
               <div class="row">
                   <div class="col-md-5 offset-md-1 my-5 p-4">
                     <h1 class="jumbotron-heading mb-3">O projektu <span class="color-1">InLege</span></h1>
-                    <p class="lead"><strong>InLege</strong> je inovativní vzdělávací portál pro studenty právnických fakult, jehož obsah tvoří především interaktivní kartičky určené zejména pro opakování učiva před semináři a zkouškami.</p>        
+                    <p class="lead"><strong>InLege</strong> je inovativní vzdělávací portál pro studenty právnických fakult, jehož obsah tvoří především interaktivní kartičky a testové otázky určené zejména pro opakování učiva před semináři a zkouškami.</p>        
                 </div>
               </div>
           </div>
@@ -99,7 +99,7 @@
                                     <div class="col-8">
                                         <div class="ml-3">
                                             <h5 class="reason-title">Jakub Spáčil</h5>
-                                            <p class="reason-content pt-3">Jakub je absolventem Právnické fakulty Univerzity Palackého v Olomouci, kde nyní dokončuje také doktorské studium v oboru mezinárodní právo. V červnu 2023 složil justiční zkoušky, pracuje v justici a usiluje o jmenování soudcem. Je hlavním autorem celého projektu a garantem jeho obsahu.</p>
+                                            <p class="reason-content pt-3">Jakub je absolventem Právnické fakulty Univerzity Palackého, kde nyní dokončuje také doktorské studium v oboru mezinárodní právo. Má na starosti obsah portálu.</p>
                                         </div>
                                     </div>
                                     
@@ -117,7 +117,7 @@
                                     <div class="col-8">
                                         <div class="ml-3">
                                             <h5 class="reason-title">Ondřej Holubec</h5>
-                                            <p class="reason-content pt-3">Ondřej vystudoval vysokou školu se zaměřením na byznys a posledních několik let rozvíjel a manažersky řídil webové projekty. I jako hrdý otec čerstvě narozených dvojčat si našel čas na to, aby přiložil ruku k dílu a pomohl udělat z InLege užitečný nástroj pro mladé právníky.</p>
+                                            <p class="reason-content pt-3">Ondřej vystudoval vysokou školu se zaměřením na byznys a posledních několik let rozvíjel a manažersky řídil webové projekty. Stejná je i jeho role v InLege.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -183,7 +183,7 @@
                     <h1 class="mb-4 text-center">A co bude dál?</h1>
                     <div class="row">
                         <div class="col-12 mb-3">
-                            <p class="fs-5 text-center">Spuštění projektu v prosinci 2023 je vlastně teprve začátkem. Máme spoustu nápadů, jak InLege vylepšit a udělat ještě užitečnějším. Nejen, že chceme zněkolikanásobit množství obsahu v podobně interaktivních kartiček, ale rádi bychom přidali také nové funkce, jako jsou testové otázky, miniklauzury apod. Čím více spokojených uživatelů budeme mít, tím lepší bude i InLege. Neváhejte proto prosím nejen šířit InLege mezi své přátele, ale také poskytnout nám <a href="/legal/feedback">zpětnou vazbu</a>. Slibujeme, že si ji vezmeme k srdci při dalším rozvoji aplikace.</p>
+                            <p class="fs-5 text-center">Spuštění projektu v prosinci 2023 je teprve začátek. Máme spoustu nápadů, jak InLege vylepšit a udělat ještě užitečnějším. Postupně přidáváme nový obsah i funkce. Čím více spokojených uživatelů budeme mít, tím lepší bude i InLege. Neváhejte proto prosím nejen šířit InLege mezi své přátele, ale také poskytnout nám <a href="/legal/feedback">zpětnou vazbu</a>. Slibujeme, že si ji vezmeme k srdci při dalším rozvoji aplikace.</p>
                         </div>
                     </div>
                 </div>
