--- a/views/premium.ejs
+++ b/views/premium.ejs
@@ -59,7 +59,7 @@
             <div class="row">
                 <div class="col-md-8 offset-md-2 text-center my-5">
                     <h1 class="mb-4">Naše balíčky</h1>
-                    <p class="fs-5">Většina obsahu aplikace InLege je dostupná zdarma s balíčkem Free. Lze si však zvolit také balíček Premium s měsíční, pololetní nebo roční platbou. V rámci balíčku Premium získáš více než 2 500 prémiových kartiček a další funkce.</p>
+                    <p class="fs-5">Většina opakovacích kartiček je dostupná zdarma s balíčkem Free. Lze si však zvolit také balíček Premium s měsíční, pololetní nebo roční platbou. V rámci balíčku Premium získáš více než 2 500 prémiových kartiček, neomezených přístup k testovým otázkám a další funkce.</p>
                 </div>
             </div>
         </div>
@@ -109,7 +109,7 @@
                                         </div>
                                     </div>
                                 </li>
-                                <!--
+                                
                                 <li>
                                     <div class="d-flex align-items-center">
                                         <div>
@@ -120,7 +120,7 @@
                                         </div>
                                     </div>
                                 </li>
-                                -->
+                                
                                 <li style="opacity: 0">placeholder</li>
                                 <li style="opacity: 0">placeholder</li>
                                 <li style="opacity: 0">placeholder</li>
@@ -185,7 +185,7 @@
                                         </div>
                                     </div>
                                 </li>
-                                <!--
+                                
                                 <li>
                                     <div class="d-flex align-items-center">
                                         <div>
@@ -196,7 +196,7 @@
                                         </div>
                                     </div>
                                 </li>
-                                -->
+                                
                                 <li>
                                     <div class="d-flex align-items-center">
                                         <div>
@@ -279,7 +279,7 @@
                                         </div>
                                     </div>
                                 </li>
-                                <!--
+                                
                                 <li>
                                     <div class="d-flex align-items-center">
                                         <div>
@@ -290,7 +290,7 @@
                                         </div>
                                     </div>
                                 </li>
-                                -->
+                                
                                 <li>
                                     <div class="d-flex align-items-center">
                                         <div>
@@ -372,7 +372,7 @@
                                         </div>
                                     </div>
                                 </li>
-                                <!--
+                                
                                 <li>
                                     <div class="d-flex align-items-center">
                                         <div>
@@ -383,7 +383,7 @@
                                         </div>
                                     </div>
                                 </li>
-                                -->
+                                
                                 <li>
                                     <div class="d-flex align-items-center">
                                         <div>
