--- a/views/questions/show.ejs
+++ b/views/questions/show.ejs
@@ -110,7 +110,7 @@
             </div>
           </div>
           <div class="card mt-3">
-            <div class="card-body" id="questions-list" style="padding: 0.5rem;padding-left:1rem">
+            <div class="card-body" id="questions-list" style="padding: 0.5rem;padding-left:1rem;overflow: scroll;">
                 <div class="card-text m-4 text-center"><div class='spinner-border' role='status'><span class='visually-hidden'>Loading...</span></div></div>
             </div>
           </div>
