save and show reachedQuestionsLimitDate

--- a/views/admin/admin.ejs
+++ b/views/admin/admin.ejs
@@ -68,12 +68,37 @@
             <hr>
             <div class="row">
                 <div class="col-md-10">
-                    <p>Počet nastudovaných kartiček</p>
+                    <p>Počet nastudovaných kartiček (celkem)</p>
                 </div>
                 <div class="col-md-2">
                     <%= totalCardsSeen %>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-md-10">
+                    <p>Počet nastudovaných kartiček (měsíc)</p>
+                </div>
+                <div class="col-md-2">
+                    <%= monthCardsSeen %>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-10">
+                    <p>Počet zodpovězených otázek (celkem)</p>
+                </div>
+                <div class="col-md-2">
+                    <%= totalQuestionsSeen %>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-10">
+                    <p>Počet zodpovězených otázek (měsíc)</p>
+                </div>
+                <div class="col-md-2">
+                    <%= monthQuestionsSeen %>
+                </div>
+            </div>
+            <hr>
             <div class="row">
                 <div class="col-md-10">
                     <p>Počet uživatelů neodebírajících e-maily</p>
