--- a/views/admin/showUserDetail.ejs
+++ b/views/admin/showUserDetail.ejs
@@ -56,6 +56,13 @@
                     </div>
                     <hr />
                     <div class="col-4 fw-bold d-flex align-items-center">
+                        <p>Počet zodpovězených otázek</p>
+                    </div>
+                    <div class="col-8 d-flex align-items-center">
+                        <%= user.questionsSeenTotal %> 
+                    </div>
+                    <hr />
+                    <div class="col-4 fw-bold d-flex align-items-center">
                         <p>Datum registrace</p>
                     </div>
                     <div class="col-8 d-flex align-items-center">
