--- a/views/admin/admin.ejs
+++ b/views/admin/admin.ejs
@@ -101,6 +101,15 @@
             <hr>
             <div class="row">
                 <div class="col-md-10">
+                    <p>Dosaženo limitu otázek (tento měsíc)</p>
+                </div>
+                <div class="col-md-2">
+                    <%= reachedQuestionsLimit %>
+                </div>
+            </div>
+            <hr>
+            <div class="row">
+                <div class="col-md-10">
                     <p>Počet uživatelů neodebírajících e-maily</p>
                 </div>
                 <div class="col-md-2">
