invoice logic and activeSubscriptions

--- a/public/css/bootstrap_customised.css
+++ b/public/css/bootstrap_customised.css
@@ -87,3 +87,9 @@ a:hover {
 .btn-check:checked+.btn-outline-danger {
     background-color: #E80F88!important;
 }
+
+.dropdown-item.active, .dropdown-item:active {
+    color: #fff;
+    text-decoration: none;
+    background-color: #AF0171;
+}
