--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -2,7 +2,7 @@
 <div class="container">
     <div class="row">
         <div class="col-12 mb-3">
-            <h5>Registrovaní uživatelé <span class="text-muted">(<%= users.length %>)</span></h5>
+            <h5>Registrovaní uživatelé <span class="text-muted">(<%= users.length %>)</span> | <a href="/admin/activeSubscriptions">Aktivní předplatitelé</a></h5>
         </div>
     </div>
     <% users.forEach((user, i) => { %> 
