--- a/views/index.ejs
+++ b/views/index.ejs
@@ -54,6 +54,58 @@
                         <% } %> 
                     </div>
                 </div>
+                <% if (currentUser) { %>
+                    <div class="col-md-6">
+                        <div style="display: flex; justify-content: center; align-items: center; height:100%;width:100%">
+                            <div class="streak-box">
+                                <p class="header mb-0 d-flex justify-content-between">
+                                    <span style="color:white">x</span>
+                                    <span>Denní cíl</span>
+                                    <a href="#" class="info-icon" data-bs-toggle="modal" data-bs-target="#streakInfoModal">?</a>
+                                </p>
+                                    <div class="streak-card">
+                                        <div class="percent">
+                                        <svg>
+                                            <circle cx="80" cy="80" r="60"></circle>
+                                            <% if (currentUser.actionsToday <10 ) { %>
+                                                <circle cx="80" cy="80" r="60" style="--percent: <%= currentUser.actionsToday * 10%>"></circle>
+                                            <% } else { %>
+                                                <circle cx="80" cy="80" r="60" style="--percent: 100"></circle>
+                                            <% } %>
+                                        </svg>
+                                        <div class="number">
+                                            <% if (currentUser.actionsToday <10 ) { %>
+                                                <h3><%= currentUser.actionsToday * 10 %><span> %</span></h3>
+                                            <% } else { %>
+                                                <h3>100<span> %</span></h3>
+                                            <% } %>
+                                        </div>
+                                        </div>
+                                    </div>
+                                <p class="header">
+                                    Aktuální streak: <span class="text-bold"><%= currentUser.streakLength %></span>
+                                    <% if (currentUser.streakLength === 1) { %>
+                                        den
+                                    <% } else if (currentUser.streakLength > 0 && currentUser.streakLength < 5){ %>
+                                        dny
+                                    <% } else { %>
+                                        dní
+                                    <% } %>
+                                </p>
+                                
+                                <hr style="color:#E80F88">
+                                <p class="header mb-2">Tvůj přehled</p>
+                                <ul class="stats-list text-smaller">
+                                    <li class="stats-item "><span>Kartiček celkem</span><span class="text-bold"><%= currentUser.cardsSeen %></span></li>
+                                    <li class="stats-item text-muted mb-2"><span>Kartiček tento měsíc</span><span class="text-bold"><%= currentUser.cardsSeenThisMonth %></span></li>
+                                    <li class="stats-item "><span>Otázek celkem</span><span class="text-bold"><%= currentUser.questionsSeenTotal %></span></li>
+                                    <li class="stats-item text-muted"><span>Otázek tento měsíc</span><span class="text-bold"><%= currentUser.questionsSeenThisMonth %></span></li>
+                                </ul>
+                                
+                            </div>
+                        </div>
+                    </div>
+                <% } %>
               </div>
           </div>
         </section>
@@ -263,6 +315,18 @@
         </div>
     </section>
 </main>
+
+<!-- STREAK INFO MODAL-->
+<div class="modal fade" id="streakInfoModal" tabindex="-1">
+    <div class="modal-dialog modal-dialog-centered edit-modal">
+    <div class="modal-content">
+        <div class="modal-body d-flex justify-content-center align-items-center">
+            <p class="text-center">Ke splnění denního cíle je třeba projít dohromady alespoň 10 kartiček nebo testových otázek, a to nejpozději do půlnoci.</p>
+        </div>
+    </div>
+    </div>
+</div>
+
     <%- include('./partials/footer') %>
     <%- include('./partials/cookiesBar')%> 
     <!-- JS for Bootstrap -->
