--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -39,6 +39,105 @@ body {
     background-blend-mode: darken;
 }
 
+/*STREAK BOX*/
+.streak-box {
+    background-color: white;
+    min-height: 40%;
+    min-width: 40%;
+    border-radius: 0.25rem;
+    border: 1px solid #dfdfdf;
+    padding: 1rem;
+    padding-bottom: 0;
+    color: #212529;
+}
+
+.streak-box .header {
+    text-align: center;
+    font-weight: 600;
+    font-size: 1.2rem;
+}
+
+.streak-box .info-icon {
+    background-color: #dfdfdf;
+    width: 16px;
+    height: 16px;
+    font-size: 12px;
+    font-weight: 600;
+    border-radius: 50px;
+    color: black;
+}
+
+.streak-box .stats-list {
+    list-style: none;
+    padding-left: 0;
+}
+
+.streak-box .stats-item {
+    display: flex;
+    justify-content: space-between;
+}
+
+.streak-card {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    background-color: #ffffff;
+    margin: 0 20px;
+    width: 180px;
+    height: 170px;
+  }
+  
+  .streak-card .percent {
+    position: relative;
+  }
+  
+  .streak-card svg {
+    position: relative;
+    width: 160px;
+    height: 160px;
+    transform: rotate(-90deg);
+  }
+  
+  .streak-card svg circle {
+    width: 100%;
+    height: 100%;
+    fill: none;
+    stroke: #f0f0f0;
+    stroke-width: 10;
+    stroke-linecap: round;
+  }
+  
+  .streak-card svg circle:last-of-type {
+    stroke-dasharray: 375px;
+    stroke-dashoffset: calc(375px - (375px * var(--percent)) / 100);
+    stroke: #3498db; 
+  }
+  
+  .streak-card .number {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  
+  .streak-card .number h3 {
+    font-weight: 200;
+    font-size: 1.5rem;
+  }
+  
+  .streak-card .number h3 span {
+    font-size: 1.5rem;
+  }
+  
+  .streak-card .title h2 {
+    margin: 25px 0 0;
+  }
+
+  .streak-card:nth-child(2) svg circle:last-of-type {
+    stroke: #E80F88;
+  }
+
 .landing-img {
     width: 100px;
     height: 100px;
@@ -199,4 +298,11 @@ body {
     .jumbotron-heading {
         font-size: 6vh;
     }
+    .streak-box {
+        margin-bottom: 4rem;
+        margin-top: -4rem;
+    }
+    .streak-card {
+        width: 200px;
+      }
   }
