--- a/views/admin/email.ejs
+++ b/views/admin/email.ejs
@@ -42,6 +42,12 @@
                     </label>
                 </div>
                 <div class="form-check">
+                    <input class="form-check-input" type="radio" name="groupChoice" id="radioUchazec" value="radioUchazec">
+                    <label class="form-check-label" for="radioUchazec">
+                    Zaslat všem uživatelům typu "Uchazeč"
+                    </label>
+                </div>
+                <div class="form-check">
                     <input class="form-check-input" type="radio" name="groupChoice" id="radioTest" value="radioTest" checked>
                     <label class="form-check-label" for="radioTest">
                     Testovací e-mail (zašle jen na pravnicime@gmail.com)
